--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <script src="js/CanonBall.js"></script>
   <script src="js/ShootBall.js"></script>
+  <script src="matter.js"></script>
 
   <script src="sketch.js"></script>
 </body>
